--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,16 +15,17 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [12.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v2
-      - env:
-          MONGO_TEST_URI: mongodb+srv://dro:pword1234@cluster0.ytwpa.mongodb.net/test-graphql-url-shortener?retryWrites=true&w=majority
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile
       - run: yarn test
+      - env:
+          MONGO_TEST_URI: mongodb+srv://dro:pword1234@cluster0.ytwpa.mongodb.net/test-graphql-url-shortener?retryWrites=true&w=majority
+
