--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile
       - run: yarn test
-      - env:
+        env:
           MONGO_TEST_URI: mongodb+srv://dro:pword1234@cluster0.ytwpa.mongodb.net/test-graphql-url-shortener?retryWrites=true&w=majority
 
