--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "devstart": "nodemon app.js",
-    "test": "mocha --timeout 10000",
+    "test": "mocha --exit --timeout 10000",
     "lint": "eslint --init"
   },
   "dependencies": {
